<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>2.1.0.RELEASE</version>
    <relativePath/>
  </parent>

  <groupId>zone.rawbot.zeitmaschine</groupId>
  <artifactId>zeitmaschine-project</artifactId>
  <packaging>pom</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>zeitmaschine-project</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>8</java.version>
    <minio.version>5.0.2</minio.version>
  </properties>

  <modules>
    <module>backend</module>
    <module>frontend</module>
  </modules>

  <dependencyManagement>
    <dependencies>
      <!-- dependencies to self -->
      <dependency>
        <groupId>zone.rawbot.zeitmaschine</groupId>
        <artifactId>zeitmaschine</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>zone.rawbot.zeitmaschine</groupId>
        <artifactId>zeitmaschine-frontend</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>io.minio</groupId>
        <artifactId>minio</artifactId>
        <version>${minio.version}</version>
      </dependency>
      <dependency>
        <groupId>javax.inject</groupId>
        <artifactId>javax.inject</artifactId>
        <version>1</version>
      </dependency>


      <!-- Test dependencies -->
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-api</artifactId>
        <scope>test</scope>
      </dependency>
    </dependencies>

  </dependencyManagement>

</project>
